--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
     "firebase": "^8.6.8",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "^0.3.1"
+    "recoil": "^0.3.1",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
